--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@ obj/
 Packages/
 ProjectSettings/
 Temp/
-"2d Platformer.sln"
+"2D Platformer.sln"
 Assembly-CSharp.csproj
 Assembly-CSharp-Editor.csproj
